style.css
* {
    margin: 0;
    padding: 0;
}
html {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
}


.upper {
    display: flexbox;
    background-color: #1F2937;
    
}

.link-tabs {

    margin-left: 1500px;

}

.link-tabs ul {
    list-style: none;
}

.link-tabs li {
    display: inline;
    
}

.recipe-link {
    margin: 50px;
}

.link-tabs a {
    color: cornsilk;
    text-decoration: none;
}

div.logo img {
    height: 100px;
    margin-bottom: -20px;
    margin-left: 50px;
}

